# shaka-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PUBLIC_READINESS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_coding_capabilities.py  test_tui.py  test_whatsapp_adapter.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BRAND.md  DEPLOYMENT_README.md  ONBOARDING.md  ROADMAP.md
shaka/: __init__.py  agent.py  ascii_art.py  automation.py  cli.py  code_workflow.py  config.py  config.yaml  connectors.py  credentials.py  cron.py  daemon.py  email_runtime.py  eval_runtime.py  fact_extractor.py  local_state.py  logo_ascii.py  mcp_runtime.py  memory.py  message_builder.py  monitor.py  proof.py  providers.py  redaction.py  repo_memory.py  skills.py  task_runner.py  tui.py  ui_textual.py  web_runtime.py  website_builder.py
shaka/adapters/whatsapp/: adapter.py  demo.py  mock_demo.py  test_adapter.py
shaka/dashboard/: app.py
shaka/dashboard/templates/: index.html
shaka/i18n/: __init__.py
shaka/i18n/translations/: en.json  zu.json
tests/: test_agent_tool_approval.py  test_automation_runtime.py  test_basic.py  test_code_workflow.py  test_cron_runtime.py  test_daemon_scheduler.py  test_dashboard.py  test_email_runtime.py  test_eval_runtime.py  test_local_state.py  test_mcp_runtime.py  test_memory_search.py  test_personality.py  test_proof_report.py  test_provider_runtime.py  test_runtime_controls.py  test_skills_metadata.py  test_task_runner.py  test_tui_review.py  test_tui_textual.py  test_website_builder.py
(+19 files in other folders)
