[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaka-agent"
version = "0.1.0"
description = "Local-first open-source AI agent runtime with CLI, gateway, skills, memory, and dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shaka Community"}
]
keywords = ["ai", "agent", "assistant", "whatsapp", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.0",
  "pyyaml>=6.0",
  "requests>=2.28",
  "openai>=1.0",
  "google-generativeai>=0.8.0",
  "rich>=14.0.0",
  "prompt_toolkit>=3.0",
  "mcp>=1.27.0",
  "ddgs>=9.0.0",
  "textual>=0.29.0",
  "flask>=3.0.0",
  "waitress>=3.0.0",
  "playwright>=1.40.0",
  "psutil>=5.9.0",
  "starlette>=0.40.0,<0.42.0",
]

[project.scripts]
shaka = "shaka.cli:main"


[tool.setuptools.packages.find]
include = ["shaka*"]

[tool.setuptools.package-data]
shaka = [
  "config.yaml",
  "dashboard/templates/*.html",
  "i18n/translations/*.json",
  "skills_core/*/skill.yaml",
]

[tool.pytest.ini_options]
norecursedirs = [
  "openclaw",
  "shaka-desktop",
  "build",
  "venv",
  ".git",
  ".pytest_cache",
]
